--- a/css/styles.css
+++ b/css/styles.css
@@ -463,9 +463,7 @@ body {
   align-items: center;
   gap: 24px;
 }
-.subscribe-form-field {
-}
-.subscribe-form-input {
+.subscribe-form-field .subscribe-form-input {
   width: 264px;
   height: 40px;
   padding: 8px 16px;
@@ -517,4 +515,70 @@ body {
   opacity: 1;
   visibility: visible;
   pointer-events: initial;
+}
+.modal {
+  position: relative;
+  width: 408px;
+  min-height: 584px;
+  padding: 24px;
+  border-radius: 4px;
+  background-color: #fafafa;
+}
+.modal-btn {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 24px;
+  height: 24px;
+  color: #2e2f42;
+}
+.modal-btn-icon {
+  fill: currentColor;
+}
+.modal-caption {
+  padding-top: 72px;
+  width: 360px;
+  color: #2e2f42;
+  text-align: center;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
+.form-label {
+  display: block;
+  margin-bottom: 4px;
+  color: #8e8f99;
+  font-size: 12px;
+  line-height: 1.16;
+  letter-spacing: 0.04em;
+}
+.form-field {
+  position: relative;
+}
+.form-input {
+  width: 100%;
+  height: 40px;
+  padding-left: 38px;
+  border-radius: 4px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  outline: transparent;
+  transition: border-color 300ms ease-in;
+}
+.form-input:focus {
+  border-color: #4d5ae5;
+}
+.form-icon {
+  position: absolute;
+  top: 50%;
+  left: 16px;
+  transform: translateY(-50%);
+  fill: #2e2f42;
+  transition: fill 300ms ease-in;
+}
+.form-input:focus + .form-icon {
+  fill: #4d5ae5;
 }
