--- a/css/styles.css
+++ b/css/styles.css
@@ -496,6 +496,8 @@ body {
 .subscribe-form-icon {
   fill: #ffffff;
 }
+
+/* Modal Form */
 .backdrop {
   position: fixed;
   top: 0;
@@ -506,7 +508,8 @@ body {
   width: 100%;
   height: 100%;
   background-color: rgba(46, 47, 66, 0.4);
-  transition: opacity 300ms ease-in, visibility 300ms ease-in;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
   opacity: 0;
   visibility: hidden;
   pointer-events: none;
@@ -517,29 +520,52 @@ body {
   pointer-events: initial;
 }
 .modal {
-  position: relative;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%) scale(1);
+  box-shadow: 1px 1px rgba(0, 0, 0, 0.14), 0px 1px 3px rgba(0, 0, 0, 0.12),
+    0px 2px 1px rgba(0, 0, 0, 0.2);
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding-top: 72px;
+  padding-bottom: 24px;
+  padding-left: 24px;
+  padding-right: 24px;
+
   width: 408px;
   min-height: 584px;
-  padding: 24px;
   border-radius: 4px;
-  background-color: #fafafa;
+  background: #fcfcfc;
 }
 .modal-btn {
   position: absolute;
+  padding: 0;
   top: 24px;
   right: 24px;
   display: flex;
-  justify-content: center;
   align-items: center;
+  justify-content: center;
   width: 24px;
   height: 24px;
+  border-radius: 50%;
+  background-color: #e7e9fc;
+  border: 1px solid rgba(0, 0, 0, 0.1);
   color: #2e2f42;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-btn:hover,
+.modal-btn:focus {
+  color: #ffffff;
+  background-color: #404bbf;
+  border: none;
 }
 .modal-btn-icon {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   fill: currentColor;
 }
 .modal-caption {
-  padding-top: 72px;
+  margin-bottom: 16px;
   width: 360px;
   color: #2e2f42;
   text-align: center;
@@ -553,20 +579,28 @@ body {
   margin-bottom: 4px;
   color: #8e8f99;
   font-size: 12px;
-  line-height: 1.16;
+  line-height: 1.17;
   letter-spacing: 0.04em;
+}
+.modal-wrapper {
+  margin-bottom: 8px;
+}
+.modal-wrapper.comment {
+  margin-bottom: 16px;
 }
 .form-field {
   position: relative;
 }
 .form-input {
+  border: none;
+  padding-left: 38px;
   width: 100%;
   height: 40px;
-  padding-left: 38px;
   border-radius: 4px;
   border: 1px solid rgba(46, 47, 66, 0.4);
+  background-color: transparent;
   outline: transparent;
-  transition: border-color 300ms ease-in;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input:focus {
   border-color: #4d5ae5;
@@ -577,8 +611,81 @@ body {
   left: 16px;
   transform: translateY(-50%);
   fill: #2e2f42;
-  transition: fill 300ms ease-in;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 .form-input:focus + .form-icon {
   fill: #4d5ae5;
+}
+.textarea-comment {
+  width: 100%;
+  height: 120px;
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  outline: transparent;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  padding: 8px 16px;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.textarea-comment:focus {
+  border-color: #4d5ae5;
+}
+.modal-wrapper-accept {
+  margin-bottom: 24px;
+}
+.user-privacy {
+  font-size: 12px;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  color: #8e8f99;
+}
+.checkbox-span {
+  width: 16px;
+  height: 16px;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 2px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  display: inline-flex;
+  align-items: center;
+  justify-content: center;
+  fill: transparent;
+}
+.footer-checkbox:checked + .user-privacy > .checkbox-span {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+}
+.footer-checkbox-link {
+  color: #4d5ae5;
+}
+.modal-send {
+  display: block;
+  margin: 0 auto;
+  min-width: 169px;
+  height: 56px;
+  cursor: pointer;
+  color: #fff;
+  background-color: #4d5ae5;
+  border: none;
+  border-radius: 4px;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  padding: 16px 32px;
+  text-align: center;
+  font-family: inherit;
+  font-weight: 500;
+  line-height: 1.5;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  gap: 10px;
+  box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
+}
+.modal-send:hover,
+.modal-send:focus {
+  background-color: #404bbf;
 }
