--- a/css/styles.css
+++ b/css/styles.css
@@ -559,6 +559,7 @@ body {
   color: #2e2f42;
   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  cursor: pointer;
 }
 .modal-btn:hover,
 .modal-btn:focus {
