--- a/css/styles.css
+++ b/css/styles.css
@@ -68,26 +68,6 @@ input {
   border: 1px solid #e7e9fc;
   border-top: none;
 }
-.list-title {
-  display: flex;
-  margin-bottom: 8px;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-}
-.list-text {
-  display: flex;
-  margin-bottom: 8px;
-  justify-content: center;
-  align-items: center;
-  text-align: center;
-  margin-left: auto;
-  margin-right: auto;
-  line-height: 1.5;
-  letter-spacing: 0.02em;
-}
 
 /* Body */
 body {
@@ -315,6 +295,26 @@ body {
 .social-icon-wrapper {
   padding: 32px 0;
 }
+.list-title {
+  display: flex;
+  margin-bottom: 8px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+}
+.list-text {
+  display: flex;
+  margin-bottom: 8px;
+  justify-content: center;
+  align-items: center;
+  text-align: center;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
+}
 .social-icon-list {
   display: flex;
   justify-content: center;
@@ -365,6 +365,13 @@ body {
   width: 360px;
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+.op-img:hover {
+  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
+    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+}
+.op-img:hover .hide-text {
+  transform: translateY(0%);
+}
 .img-wrapper {
   position: relative;
   overflow: hidden;
@@ -383,12 +390,19 @@ body {
   transform: translateY(100%);
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
-.op-img:hover {
-  box-shadow: 0px 1px 6px rgba(46, 47, 66, 0.08),
-    0px 1px 1px rgba(46, 47, 66, 0.16), 0px 2px 1px rgba(46, 47, 66, 0.08);
+.list-title-por {
+  display: flex;
+  margin-bottom: 8px;
+  margin-left: auto;
+  margin-right: auto;
 }
-.op-img:hover .hide-text {
-  transform: translateY(0%);
+.list-text-por {
+  display: flex;
+  margin-bottom: 8px;
+  margin-left: auto;
+  margin-right: auto;
+  line-height: 1.5;
+  letter-spacing: 0.02em;
 }
 
 /* Footer */
@@ -398,7 +412,6 @@ body {
 .footer-container {
   display: flex;
   align-items: baseline;
-  margin-right: 120px;
 }
 .f-logo {
   display: flex;
@@ -537,7 +550,6 @@ body {
   padding-bottom: 24px;
   padding-left: 24px;
   padding-right: 24px;
-
   width: 408px;
   min-height: 584px;
   border-radius: 4px;
